...
        android:layout_marginTop="@dimen/margin_small"
        githubClientApp:layout_constraintLeft_toLeftOf="parent"
        githubClientApp:layout_constraintRight_toRightOf="parent"
        githubClientApp:layout_constraintTop_toBottomOf="@id/tv_main_header">

        <EditText
            android:id="@+id/et_main_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_et_username"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_main_load_repositories"
        style="@style/MainButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/main_btn_search"
        githubClientApp:layout_constraintLeft_toLeftOf="parent"
...
